scrollbar Issue Fixed

--- a/source/pages/popup/signed/Accounts/index.scss
+++ b/source/pages/popup/signed/Accounts/index.scss
@@ -1,3 +1,20 @@
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: transparent;
+  // border-radius: 8px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgba(8, 25, 39, 0.7);
+  opacity: 0.6; 
+  border-radius: 5px; 
+}
+
 .page {
   height: $appHeight;
   overflow-y: scroll;
@@ -43,6 +60,7 @@
   -webkit-backdrop-filter: blur(20px);
   backdrop-filter: blur(20px);
   overflow-x: hidden;
+  
 }
 
 .footerCont {
