--- a/source/pages/popup/signed/NFTPurchaseDetails/index.scss
+++ b/source/pages/popup/signed/NFTPurchaseDetails/index.scss
@@ -1,3 +1,19 @@
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: transparent;
+  // border-radius: 8px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgba(8, 25, 39, 0.7);
+  opacity: 0.6; 
+  border-radius: 5px; 
+}
 .page {
   width: auto;
   display: flex;
